# sample-librarian

./: .gitignore  README.es.md  README.fr.md  README.jp.md  README.kr.md  README.md  README.zh.md  SKILL.md  batch_analyze_sqlite.py  config.example.py  config.py  index.html  mcp_server.py  pyproject.toml  reanalyze_errors.py  robots.txt  setup.sh  sitemap.xml
.github/workflows/: ci.yml
data/: samples.db  samples.db-shm
docs/: mcp-clients.md  recipes.md  security.md  troubleshooting.md
librarian/: __init__.py  analyze.py  db.py  index.py  live_agent_bridge.py  recommend.py  search.py
tests/: conftest.py  test_analyze.py  test_db.py  test_live_agent_bridge.py
